--- a/index.html
+++ b/index.html
@@ -16,7 +16,20 @@
   <body>
     <section class="showcase" id="landing">
       <header>
-        <h2 class="logo"></h2>
+        <div class="login">
+          <form class="log-in-form">
+            <h4 class="text-center">Log in with you email account</h4>
+            <label>Email
+              <input type="email" placeholder="somebody@example.com">
+            </label>
+            <label>Password
+              <input type="password" placeholder="Password">
+            </label>
+            <input id="show-password" type="checkbox"><label for="show-password">Show password</label>
+            <p><input type="submit" class="button expanded" value="Log in"></input></p>
+            <p class="text-center"><a href="#">Forgot your password?</a></p>
+          </form>
+        </div>
         <div class="toggle"></div>
       </header>
       <video src="assets/img/SoccerHeader.mp4" muted loop autoplay></video>
