changed form holder to containter minor CSS edits to try and center form

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Foundation Starter Template</title>
+    <title>Just-Your-Teams</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation.min.css"
@@ -16,21 +16,23 @@
   <body>
     <section class="showcase" id="landing">
       <header>
-        <div class="login">
-          <form class="log-in-form">
-            <h4 class="text-center">Log in with you email account</h4>
-            <label>Email
-              <input type="email" placeholder="somebody@example.com">
-            </label>
-            <label>Password
-              <input type="password" placeholder="Password">
-            </label>
-            <input id="show-password" type="checkbox"><label for="show-password">Show password</label>
-            <p><input type="submit" class="button expanded" value="Log in"></input></p>
-            <p class="text-center"><a href="#">Forgot your password?</a></p>
-          </form>
+        <div class="grid-container">
+          <div class="grid-x grid-margin-x align-center">
+            <form class="log-in-form" method="POST">
+              <h4 class="text-center">Log in with you email account</h4>
+              <label>Email
+                <input type="email" placeholder="somebody@example.com">
+              </label>
+              <label>Password
+                <input type="password" placeholder="Password">
+              </label>
+              <input id="show-password" type="checkbox"><label for="show-password">Show password</label>
+              <p><input type="submit" class="button expanded" value="Log in"></input></p>
+              <p class="text-center"><a href="#">Forgot your password?</a></p>
+            </form>
+          </div>
+          <div class="toggle"></div>
         </div>
-        <div class="toggle"></div>
       </header>
       <video src="assets/img/SoccerHeader.mp4" muted loop autoplay></video>
       <div class="overlay"></div>
