--- a/public/landing.html
+++ b/public/landing.html
@@ -11,7 +11,7 @@
       integrity="sha256-ogmFxjqiTMnZhxCqVmcqTvjfe1Y/ec4WaRj/aQPvn+I="
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../assets/css/landing-style.css" />
+    <link rel="stylesheet" href="/assets/css/landing-style.css" />
   </head>
   
   <body>
@@ -19,18 +19,18 @@
       <header>
         <div class="grid-container">
           <div class="grid-x grid-margin-x align-center">
-            <form class="log-in-form" method="POST">
+            <form id="login-form" class="log-in-form" method="POST">
               <h4 class="text-center">Log in with your username</h4>
               <label style="color: ivory;">Username
-                <input type="text" placeholder="Enter Username">
+                <input id="username-input-login" type="text" name="username" placeholder="Enter Username">
               </label>
               <label style="color: ivory;">Password
-                <input type="password" placeholder="Enter Password">
+                <input id="password-input-login" type="password" name="password" placeholder="Enter Password">
               </label>
               <p><input type="submit" class="button expanded" value="Log in"></input></p>
               <p class="text-center"><a href="/create-acc">No account? Sign up today!</a></p>
             </form>
-            <video class="" src="../assets/img/SoccerHeader.mp4" muted loop autoplay></video>
+            <video class="" src="/assets/img/SoccerHeader.mp4" muted loop autoplay></video>
           </div>
           <div class="toggle"></div>
         </div>
@@ -38,5 +38,5 @@
       <div class="overlay"></div>
     </section>
   </body>
-  <script src="../assets/js/script.js"></script>
+  <script src="/assets/js/login.js"></script>
 </html>
