--- a/public/create-acc.html
+++ b/public/create-acc.html
@@ -78,5 +78,5 @@
       </div>
     </section>
   </body>
-  <script src="../assets/js/script.js"></script>
+  <script src="../assets/js/signup.js"></script>
 </html>
