trying to merge

--- a/public/team-search.html
+++ b/public/team-search.html
@@ -24,7 +24,7 @@
           <div id="topbar-responsive" class="topbar-responsive-links">
             <div class="top-bar-right">
               <ul class="menu simple vertical medium-horizontal">
-                <li><a href="#">Home</a></li>
+                <li><a href="userpage.html">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li>
                   <button
@@ -47,41 +47,46 @@
                 <form>
                   <h3>Search for Teams</h3>
                   <div class="row columns">
-                    <label>Keyword
-                      <input type="text" name="keyword" placeholder="Any">
-                    </label>
                   </div>
                   <div class="row columns">
-                    <label>Property Status
+                    <label>Sport
                       <select name="status" type="text">
-                        <option>Any</option>
-                        <option value="rent">Rent</option>
-                        <option value="buy">Buy</option>
+                        <option value="soccer">Soccer</option>
                       </select>
                     </label>
                   </div>
                   <div class="row columns">
-                    <label>Property Type
+                    <label>League
                       <select name="status" type="text">
-                        <option>Any</option>
-                        <option value="office">Office</option>
-                        <option value="building">Building</option>
+                        <option value="epl">English Premier League</option>
                       </select>
                     </label>
                   </div>
                   <div class="row columns">
-                    <label>Location
-                      <input type="text" name="location" placeholder="Any">
+                    <label>Teams
+                      <select name="status" type="text">
+                        <option value="arsenal">Arsenal FC</option>
+                        <option value="aston-villa">Aston Villa FC</option>
+                        <option value="brighton">Brighton & Hove Albion FC</option>
+                        <option value="burnley">Burnley FC</option>
+                        <option value="chelsea">Chelsea FC</option>
+                        <option value="crystal-palace">Crystal Palace FC</option>
+                        <option value="everton">Everton FC</option>
+                        <option value="fulham">Fulham FC</option>
+                        <option value="leeds-united">Leeds United</option>
+                        <option value="leicester-city">Leicester City</option>
+                        <option value="liverpool">Liverpool FC</option>
+                        <option value="manchester-city">Manchester City FC</option>
+                        <option value="manchester-united">Manchester United FC</option>
+                        <option value="newcastle-united">Newcastle United FC</option>
+                        <option value="sheffield-united">Sheffield United FC</option>
+                        <option value="southampton">Southampton FC</option>
+                        <option value="tottenham-hotspur">Tottenham Hotspur</option>
+                        <option value="west-bromwich-albion">West Bromwich Albion</option>
+                        <option value="west-ham-united">West Ham United FC</option>
+                        <option value="wolverhampton-wanderers">Wolverhampton Wanderers</option>
+                      </select>
                     </label>
-                  </div>
-                  <div class="row">
-                    <label class="columns small-12">Price</label>
-                    <div class="columns small-6">
-                      <input type="number" min="0" name="min" placeholder="Min">
-                    </div>
-                    <div class="columns small-6">
-                      <input type="number" min="0" name="max" placeholder="Max">
-                    </div>
                   </div>
                   <button type="button" class="primary button expanded search-button">
                     Search
