create-acc page restructured

--- a/public/landing.html
+++ b/public/landing.html
@@ -11,7 +11,7 @@
       integrity="sha256-ogmFxjqiTMnZhxCqVmcqTvjfe1Y/ec4WaRj/aQPvn+I="
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/assets/css/landing-style.css" />
+    <link rel="stylesheet" href="assets/css/landing-style.css" />
   </head>
   
   <body>
@@ -30,7 +30,7 @@
               <p><input type="submit" class="button expanded" value="Log in"></input></p>
               <p class="text-center"><a href="/create-acc">No account? Sign up today!</a></p>
             </form>
-            <video class="" src="/assets/img/SoccerHeader.mp4" muted loop autoplay></video>
+            <video class="" src="assets/img/SoccerHeader.mp4" muted loop autoplay></video>
           </div>
           <div class="toggle"></div>
         </div>
