--- a/public/userpage.html
+++ b/public/userpage.html
@@ -15,7 +15,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../assets/css/userpage.css" />
+    <link rel="stylesheet" href="assets/css/userpage.css" />
   </head>
   <body>
     <section>
@@ -58,8 +58,6 @@
             </ul>
           </div>
         </footer>
-        
-        
       </div>
     </section>
   </body>
