--- a/public/userpage.html
+++ b/public/userpage.html
@@ -40,21 +40,69 @@
         </nav>
       </div>
     </section>
+    <br />
     <section>
-      <!-- User content to be added here -->
+      <div class="grid-container">
+        <div class="grid-x grid-margin-x">
+          <div class="cell large-auto">
+            <div class="card profile-card-action-icons">
+              <div class="card-section">
+                <div class="profile-card-header">
+                  <div class="profile-card-avatar">
+                    <img class="avatar-image" src="" alt="" />
+                  </div>
+                  <div class="profile-card-author">
+                    <h5 class="author-title">Username</h5>
+                  </div>
+                </div>
+                <div class="profile-card-about">
+                  <h5 class="about-title separator-left">About Me</h5>
+                  <p class="about-content">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Amet autem eveniet nulla quae ullam sit iure voluptatum,
+                    nesciunt voluptas perferendis, minus natus in quaerat?
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="cell large-auto">
+            Team content
+          </div>
+          <div class="cell large-auto">
+            Team content
+          </div>
+        </div>
+      </div>
     </section>
     <section>
       <div>
         <footer class="social-footer">
           <div class="social-footer-left">
-            <a href="#"><img class="logo" src=""></a>
+            <a href="#"><img class="logo" src="" /></a>
           </div>
           <div class="social-footer-icons">
             <ul class="menu simple">
-              <li><a href="https://www.facebook.com/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-              <li><a href="https://www.instagram.com/?hl=en"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-              <li><a href="https://www.pinterest.com/"><i class="fa fa-pinterest-p" aria-hidden="true"></i></a></li>
-              <li><a href="https://twitter.com/?lang=en"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+              <li>
+                <a href="https://www.facebook.com/"
+                  ><i class="fa fa-facebook" aria-hidden="true"></i
+                ></a>
+              </li>
+              <li>
+                <a href="https://www.instagram.com/?hl=en"
+                  ><i class="fa fa-instagram" aria-hidden="true"></i
+                ></a>
+              </li>
+              <li>
+                <a href="https://www.pinterest.com/"
+                  ><i class="fa fa-pinterest-p" aria-hidden="true"></i
+                ></a>
+              </li>
+              <li>
+                <a href="https://twitter.com/?lang=en"
+                  ><i class="fa fa-twitter" aria-hidden="true"></i
+                ></a>
+              </li>
             </ul>
           </div>
         </footer>
