userpage content cards added

--- a/public/userpage.html
+++ b/public/userpage.html
@@ -43,8 +43,8 @@
     <br />
     <section>
       <div class="grid-container">
-        <div class="grid-x grid-margin-x">
-          <div class="cell large-auto">
+        <div class="grid-x grid-margin-x align-center">
+          <div class="cell medium-auto">
             <div class="card profile-card-action-icons">
               <div class="card-section">
                 <div class="profile-card-header">
@@ -66,11 +66,69 @@
               </div>
             </div>
           </div>
-          <div class="cell large-auto">
-            Team content
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="grid-container">
+        <div class="grid-x grid-margin-x">
+          <div class="cell medium-auto">
+            <div class="basic-card">
+              <div class="basic-card-content content callout secondary">
+                <h5>Content</h5>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Sequi saepe, asperiores dolor nesciunt dolore, accusamus minus
+                  repellendus vero odio, quibusdam, ipsum nisi in a molestiae ex
+                  assumenda nulla eveniet eos!
+                </p>
+              </div>
+              <div class="links callout primary">
+                <ul class="menu">
+                  <li>
+                    <a href="#">Link</a>
+                  </li>
+                  <li>
+                    <a href="#">Link</a>
+                  </li>
+                  <li>
+                    <a href="#">Link</a>
+                  </li>
+                  <li>
+                    <a href="#">Link</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
           </div>
-          <div class="cell large-auto">
-            Team content
+          <div class="cell medium-auto">
+            <div class="basic-card">
+              <div class="basic-card-content content callout secondary">
+                <h5>Content</h5>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Sequi saepe, asperiores dolor nesciunt dolore, accusamus minus
+                  repellendus vero odio, quibusdam, ipsum nisi in a molestiae ex
+                  assumenda nulla eveniet eos!
+                </p>
+              </div>
+              <div class="links callout primary">
+                <ul class="menu">
+                  <li>
+                    <a href="#">Link</a>
+                  </li>
+                  <li>
+                    <a href="#">Link</a>
+                  </li>
+                  <li>
+                    <a href="#">Link</a>
+                  </li>
+                  <li>
+                    <a href="#">Link</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -85,22 +143,22 @@
             <ul class="menu simple">
               <li>
                 <a href="https://www.facebook.com/"
-                  ><i class="fa fa-facebook" aria-hidden="true"></i
+                  ><i class="" aria-hidden="true"></i
                 ></a>
               </li>
               <li>
                 <a href="https://www.instagram.com/?hl=en"
-                  ><i class="fa fa-instagram" aria-hidden="true"></i
+                  ><i class="" aria-hidden="true"></i
                 ></a>
               </li>
               <li>
                 <a href="https://www.pinterest.com/"
-                  ><i class="fa fa-pinterest-p" aria-hidden="true"></i
+                  ><i class="" aria-hidden="true"></i
                 ></a>
               </li>
               <li>
                 <a href="https://twitter.com/?lang=en"
-                  ><i class="fa fa-twitter" aria-hidden="true"></i
+                  ><i class="" aria-hidden="true"></i
                 ></a>
               </li>
             </ul>
