working on inserting data into userpage

--- a/public/userpage.html
+++ b/public/userpage.html
@@ -66,10 +66,10 @@
               </div>
             </div>
           </div>
-          <div class="cell large-auto">
+          <div class="cell large-auto" id="future schedule">
             Team content
           </div>
-          <div class="cell large-auto">
+          <div class="cell large-auto" id = "past results">
             Team content
           </div>
         </div>
@@ -109,4 +109,8 @@
       </div>
     </section>
   </body>
+  
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
+  <script src="./assets/js/sportsapi.js"></script>
+  <script src="./assets/js/userpage.js"></script>
 </html>
