now formats a given team in userpage

--- a/public/userpage.html
+++ b/public/userpage.html
@@ -52,7 +52,7 @@
                     <img class="avatar-image" src="" alt="" />
                   </div>
                   <div class="profile-card-author">
-                    <h5 class="author-title">Username</h5>
+                    <h5 class="author-title" id="username">Username</h5>
                   </div>
                 </div>
                 <div class="profile-card-about">
@@ -66,11 +66,11 @@
               </div>
             </div>
           </div>
-          <div class="cell large-auto" id="future schedule">
-            Team content
+          <div class="cell large-auto" id="futureSchedule">
+            Team Schedule
           </div>
-          <div class="cell large-auto" id = "past results">
-            Team content
+          <div class="cell large-auto" id = "pastResults">
+            Most Recent games
           </div>
         </div>
       </div>
