finally, create account user done.

--- a/public/create-acc.html
+++ b/public/create-acc.html
@@ -140,9 +140,8 @@
                       </select>
                     </label>
                   </div>
-                  <button
-                    type="button"
-                    class="primary button expanded search-button"
+                  <button           
+                    class="button expanded"
                   >
                     Submit
                   </button>
