log in is done - be done with it - selected model making progress

--- a/public/team-search.html
+++ b/public/team-search.html
@@ -44,7 +44,7 @@
     <section>
         <div>
             <div class="translucent-form-overlay">
-                <form>
+                <form id='sign-up-form'>
                   <h3>Search for Teams</h3>
                   <div class="row columns">
                   </div>
@@ -88,8 +88,8 @@
                       </select>
                     </label>
                   </div>
-                  <button class="primary button expanded">
-                    Search
+                  <button class="button expanded">
+                    Select Team
                   </button>
                </form>
               </div> 
@@ -216,4 +216,5 @@
       </div>
     </section>
   </body>
+  <script src="../assets/js/teamselect.js"></script>
 </html>
