--- a/public/userpage.html
+++ b/public/userpage.html
@@ -27,7 +27,7 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="team-search.html">Add Teams</a></li>
                 <li>
-                  <button
+                  <button id="logout-link"
                     type="button"
                     class="button hollow topbar-responsive-button"
                   >
@@ -111,6 +111,7 @@
   </body>
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
+  <script src="/assets/js/logout.js"></script>
   <script src="./assets/js/sportsapi.js"></script>
   <script src="./assets/js/userpage.js"></script>
 </html>
